generated/media/bazarr.Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: media
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: bazarr
  template:
    metadata:
      labels:
        name: bazarr
    spec:
      containers:
      - env:
        - name: BAZARR__SERVER__URLBASE
          value: /bazarr
        - name: BAZARR__AUTH__APIKEY
          valueFrom:
            secretKeyRef:
              key: BAZARR__AUTH__APIKEY
              name: media-secret
        image: lscr.io/linuxserver/bazarr:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            httpHeaders:
            - name: X-API-KEY
              value: $BAZARR__AUTH__APIKEY
            path: /api/system/health
            port: 6767
        name: bazarr
        readinessProbe:
          httpGet:
            httpHeaders:
            - name: X-API-KEY
              value: $BAZARR__AUTH__APIKEY
            path: /api/system/health
            port: 6767
        resources:
          limits:
            cpu: "1"
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
        volumeMounts:
        - mountPath: /config
          name: bazarr-config-pvc
        - mountPath: /Media
          name: media-nfs
      volumes:
      - name: bazarr-config-pvc
        persistentVolumeClaim:
          claimName: bazarr-config-pvc
      - name: media-nfs
        persistentVolumeClaim:
          claimName: media-nfs
