generated/media/cross-seed.Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cross-seed
  namespace: media
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: cross-seed
  template:
    metadata:
      labels:
        name: cross-seed
    spec:
      containers:
      - args:
        - daemon
        image: ghcr.io/cross-seed/cross-seed:6
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /api/ping
            port: 2468
        name: cross-seed
        readinessProbe:
          httpGet:
            path: /api/ping
            port: 2468
        resources:
          limits:
            cpu: "1"
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
        securityContext:
          runAsGroup: 1000
          runAsUser: 1000
        volumeMounts:
        - mountPath: /config
          name: cross-seed-config-pvc
        - mountPath: /config/config.js
          name: cross-seed-config-secret
          subPath: config.js
        - mountPath: /Media/Downloads/bt/complete
          name: media-nfs
          subPath: Downloads/bt/complete
      volumes:
      - name: cross-seed-config-pvc
        persistentVolumeClaim:
          claimName: cross-seed-config-pvc
      - name: cross-seed-config-secret
        secret:
          defaultMode: 420
          secretName: cross-seed-config-secret
      - name: media-nfs
        persistentVolumeClaim:
          claimName: media-nfs
