generated/media/unpackerr.Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: unpackerr
  name: unpackerr
  namespace: media
spec:
  ports:
  - name: http
    port: 5656
    targetPort: 5656
  selector:
    name: unpackerr
