generated/media/v1.Service-bazarr.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: bazarr
  name: bazarr
  namespace: media
spec:
  ports:
  - name: http
    port: 6767
    targetPort: 6767
  selector:
    name: bazarr
