generated/media/v1.Service-cross-seed.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: cross-seed
  name: cross-seed
  namespace: media
spec:
  ports:
  - name: http
    port: 2468
    targetPort: 2468
  selector:
    name: cross-seed
