generated/media/v1.Service-rtorrent.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: rtorrent
  name: rtorrent
  namespace: media
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    name: rtorrent
