generated/media/v1.Service-unpackerr.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: unpackerr
  name: unpackerr
  namespace: media
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    name: unpackerr
