generated/media/gateway.networking.k8s.io-v1.HTTPRoute-rtorrent.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rtorrent
  namespace: media
spec:
  hostnames:
  - rt.o5s.lol
  parentRefs:
  - name: nginx-gateway
    namespace: network
  rules:
  - backendRefs:
    - name: rtorrent
      port: 8080
    matches:
    - path:
        value: /
